--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
+        <link rel = "icon" type = "image/png" href = "images/favicons/ds3.png   ">
+
+        <title> 
             My First Web Page
         </title>
     </head>
@@ -29,7 +31,7 @@
         <pre>
             DANI ALVES
             DANI OLMO
-            DANI CEBALLOS
+            DANI CEBALLOS   
             DANI CARVAJAL
             DANI PAREJO
         </pre>
@@ -37,6 +39,11 @@
         <!--This is how a comment appears in VSCODE, so colorful thats stand out between the code, 
         turning that it's so easily to get spotted and fully functioned as a comment should do. 
         Android studio / flutter comments should fucking adopt this feature from VSCODE-->
+        <a href = "https://en.wikipedia.org/wiki/Dark_Souls_III" target = "_blank">  
+            <video controls width = 500>
+                <source src = "videos/videoplayback.mp4" type = "video/mp4">
+            </video>
+        </a>  
     </body>
 
 </html>
