--- a/lyrics.html
+++ b/lyrics.html
@@ -8,6 +8,27 @@
 <body>
     <h1>Gangsta's Paradise</h1>
     <h3> Coolio ft. L.V.</h3>
+
+    <a href = "https://www.youtube.com/watch?v=fPO76Jlnz6c"
+    target = "_blank">
+        <br> <h1>Original Music Video</h1>
+    </a>
+
+    <a 
+        href = "https://www.youtube.com/watch?v=fPO76Jlnz6c"
+    >
+        <img   
+            src = "images/gangsta.png"
+            height = "300"
+            alt = "Coolio Gangsta's Paradise Album Art Cover"
+        >
+    </a>
+    <br>
+
+    <audio controls autoplay muted loop>   
+        <source src = "songs/Coolio - Gangsta's Paradise (Lyrics) ft. L.V..mp3">
+    </audio>
+
     <hr> 
     <br>
 
