--- a/lyrics.html
+++ b/lyrics.html
@@ -16,6 +16,7 @@
 
     <a 
         href = "https://www.youtube.com/watch?v=fPO76Jlnz6c"
+        target = "_blank"
     >
         <img   
             src = "images/gangsta.png"
